--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,34 @@ background: linear-gradient(#dfdd59dc 50%,#e80de8 50%);
     color:rgb(0, 0, 0);
     font-size: 0.9em;
     border: none;
-    padding:
+    padding:1em 0.5em;
+
+}
+#wrapper input:focus{
+outline: none;
+border-color: #e80de8;
+
+
+}
+#wrapper button {
+    position: relative;
+    border-radius: 0.5em;
+    font-weight: 500;
+    font-size: 1em;
+    background-color: #e80de8;
+    border: none;
+    outline: none;
+    color: rgb(209, 206, 206); 
+    cursor:pointer;
+}
+#error{
+    text-align: center;
+    background-color:gainsboro;
+    color: red;
+    margin-top: 1.5em;
+    padding:1em 0;
+    border-radius: 0.8em;
+    /* display: none; */
+
 
 }
